# Sudoku

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
NewOptSAT/: CMakeLists.txt  NewOptSAT.cpp
NewOptSAT/include/: NewOptSAT.h
OptSAT/: CMakeLists.txt  OptSAT.cpp
OptSAT/include/: OptSAT.h
SAT/: CMakeLists.txt  SAT.cpp  SAT.h
SAT/include/: SAT.h
X_Sudoku/: CMakeLists.txt  X_Sudoku.cpp
X_Sudoku/include/: X_Sudoku.h
